# QELP

./: .gitignore  CLAUDE.md  README.md  pyinstaller_plan.md  pyproject.toml  qelp-onefile.spec  qelp.spec
scripts/: __init__.py  build.py  clean_build.py  test_executable.py  validate_build.py
src/qelp/: __init__.py  esxi_to_csv.py  local_logger.py  support.py
tests/: test_support.py
