[project]
name = "qelp"
version = "0.1.0"
description = "QELP (Quick ESXi Log Parser) is a Python tool that parses ESXi logs."
authors = []
dependencies = [
    "art>=6.2"
]
readme = "README.md"
requires-python = ">= 3.8"

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-watcher>=0.4.2",
    "pytest-mock>=3.14.0",
    "pyinstaller>=6.0",
    "toml>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qelp", "scripts"]

[project.scripts]
qelp = 'qelp.esxi_to_csv:main'
build-exe = 'scripts.build:main_onedir'
build-onefile = 'scripts.build:main_onefile' 
test-exe = 'scripts.test_executable:main'
